[project]
name = "wto-fish-crawler"
version = "0.1.0"
description = "Bounded crawler for the WTO Agreement on Fisheries Subsidies topic, producing a deduplicated English-only Markdown corpus for RAG."
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "selectolax>=0.3.21",
    "trafilatura>=1.12",
]

[project.optional-dependencies]
# PDF fallback backend (MinerU itself is installed separately, per its own docs)
pymupdf = ["pymupdf>=1.24", "pymupdf4llm>=0.0.17"]
# Headless-Chromium rendering of JS-built pages (DataTables tables, dynamic
# member lists) — tools/render_dynamic.py. After install run:
#     python -m playwright install chromium
render = ["playwright>=1.44"]
# Spreadsheet deliverables (checklists, indexes) built by tools/*.py
xlsx = ["openpyxl>=3.1"]
dev = ["pytest>=8", "ruff>=0.6", "pyright>=1.1"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "PERF", "PLC"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E501"]  # long literal test URLs are fine

[tool.pyright]
typeCheckingMode = "standard"
pythonVersion = "3.11"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["wto_fish"]
